[gd_scene load_steps=6 format=2]

[ext_resource path="res://Escenas/Camara/camara.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 960, 64 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 960, 64 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 63.9999, 576 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 64, 559.892 )

[node name="Camara" type="Camera2D"]
script = ExtResource( 1 )
movimiento_x = 1150
movimiento_y = 1000

[node name="AreaArriba" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 2

[node name="Colision" type="CollisionShape2D" parent="AreaArriba"]
position = Vector2( 0, -640 )
shape = SubResource( 1 )

[node name="AreaAbajo" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 2

[node name="Colision" type="CollisionShape2D" parent="AreaAbajo"]
position = Vector2( 0, 640 )
shape = SubResource( 2 )

[node name="AreaDerecha" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 2

[node name="Colision" type="CollisionShape2D" parent="AreaDerecha"]
position = Vector2( 1088, 0 )
shape = SubResource( 3 )

[node name="AreaIzquierda" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 2

[node name="Colision" type="CollisionShape2D" parent="AreaIzquierda"]
position = Vector2( -1088, 0 )
shape = SubResource( 4 )

[node name="Tween" type="Tween" parent="."]
[connection signal="body_entered" from="AreaArriba" to="." method="_on_AreaArriba_body_entered"]
[connection signal="body_entered" from="AreaAbajo" to="." method="_on_AreaAbajo_body_entered"]
[connection signal="body_entered" from="AreaDerecha" to="." method="_on_AreaDerecha_body_entered"]
[connection signal="body_entered" from="AreaIzquierda" to="." method="_on_AreaIzquierda_body_entered"]
